--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <title>Document</title>
 </head>
 <body>
-    <h2>World Cup</h2>
+    <h1>World Cup</h1>
     <main>
-      <p>Click here to view <a href="#">World Cup highlights</a>.</p>
-    <img src="/img/fifa-world-cup-2022-colouring-page-thumb.jpeg" alt="National teams score goals."></a>
+      <p>Click here to view <a href="https://www.fifa.com/fifaplus/en/tournaments/mens/worldcup/qatar2022/qatar-highlights">World Cup highlights</a>.</p>
+    <img src="/img/fifa-world-cup-2022-colouring-page-thumb.jpeg" alt="Cup emblem">
      <p>Things that people love:</p>
       <ul>
         <li>goals</li>
