--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Document</title>
+    <title>fifa-world-cup</title>
 </head>
 <body>
     <h1>World Cup</h1>
     <main>
       <p>Click here to view <a href="https://www.fifa.com/fifaplus/en/tournaments/mens/worldcup/qatar2022/qatar-highlights">World Cup highlights</a>.</p>
-    <img src="/img/fifa-world-cup-2022-colouring-page-thumb.jpeg" alt="Cup emblem">
+    <img src="/img/fifa-world-cup-2022-colouring-page-thumb.svg" alt="Cup emblem">
      <p>Things that people love:</p>
       <ul>
         <li>goals</li>
