--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <h1>World Cup</h1>
     <main>
       <p>Click here to view <a href="https://www.fifa.com/fifaplus/en/tournaments/mens/worldcup/qatar2022/qatar-highlights">World Cup highlights</a>.</p>
-    <img src="/img/emblem.jpeg" alt="Cup emblem">
+    <img src="./img/emblem.jpeg" alt="Cup emblem">
      <p>Things that people love:</p>
       <ul>
         <li>goals</li>
